--- a/antora.yml
+++ b/antora.yml
@@ -45,3 +45,6 @@ nav:
 
   # Architecture
   #- modules/architecture/nav-architecture-components-guide.adoc
+
+pdfFiles:
+  - installation:_pdf-installation-guide.adoc
