--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   },
   "devDependencies": {
     "@antora/cli": "^2.3.3",
-    "@djencks/antora-pdf": "https://experimental-repo.s3-us-west-1.amazonaws.com/djencks-antora-pdf-v1.0.0-alpha.4.tgz",
-    "@djencks/asciidoctor-ainclude": "https://experimental-repo.s3-us-west-1.amazonaws.com/djencks-asciidoctor-ainclude-v0.0.2.tgz",
+    "@djencks/antora-pdf": "https://experimental-repo.s3-us-west-1.amazonaws.com/djencks-antora-pdf-v1.0.0-alpha.4-0.0.1.tgz",
+    "@djencks/asciidoctor-ainclude": "https://experimental-repo.s3-us-west-1.amazonaws.com/djencks-asciidoctor-ainclude-v0.0.3.tgz",
     "@djencks/content-aggregator": "https://experimental-repo.s3-us-west-1.amazonaws.com/djencks-content-aggregator-v2.3.3.tgz",
     "@djencks/pdf-ui": "https://experimental-repo.s3-us-west-1.amazonaws.com/djencks-pdf-ui-v0.0.1.tgz",
     "@djencks/playbook-builder": "https://experimental-repo.s3-us-west-1.amazonaws.com/djencks-playbook-builder-v2.3.3.tgz",
