--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -12,15 +12,16 @@ asciidoc:
 
     # Adjust <productnumber>, <docversion>, and <minorversion> numbers at release.
     productname: 'Uyuni'
-    productnumber: 4.1
-    docversion: 4.1
-    minorversion402: '4.0.2'
+    productnumber: '4.1'
+    docversion: '4.1'
+    minorversion: '4.1.3'
     saltversion: 3000
     sles-version: 15
-    sp-vert: sp2 # use for terminal block
     sp-version: sp2
+    sp-vert: sp2 # use for terminal block
     sp-version-l: sp2
-    smrproductnumber: 4.0
+    smrproductnumber: 4.1
+    opensuse-version: 15.2
 
     # Asciidoc Configuration Attributes
     linkattrs: true
@@ -29,8 +30,8 @@ asciidoc:
     experimental: true
 
     # Enable or disable SUSE Manager conditional content (Not applicable to UYUNI - default is false)
-    uyuni-content: true
     suma-content: false
+    uyuni-content: true
 
 
     # SUSE Manager/Uyuni Entities
@@ -38,16 +39,19 @@ asciidoc:
     zseries: IBM Z
     zsystems: IBM Z
     ibmz: IBM Z
-    ppc: POWER
-    ppc64le: 'IBM Power PC'
+    ppc: 'IBM Power'
+    ppc64: ppc64
+    ppc64le: ppc64le
     ipf: Itanium
     x86: x86
     x86_64: x86-64
+    s390x: s390x
     redhat: 'Red Hat'
     rhel: 'Red Hat Enterprise Linux'
     rhela: 'RHEL'
     rhnminrelease6: 'Red Hat Enterprise Linux Server 6'
     rhnminrelease7: 'Red Hat Enterprise Linux Server 7'
+    rhnminrelease8: 'Red Hat Enterprise Linux Server 8'
     ubuntu: Ubuntu
     debian: Debian
     opensuse: openSUSE
@@ -56,10 +60,10 @@ asciidoc:
     kickstart: Kickstart
     susemgr: 'SUSE Manager'
     productproxy: '{productname} Proxy'
-    smr: 'SUSE Manager for Retail'
+    smr: 'for Retail'
     uyuni: Uyuni
     slepos: 'SUSE Linux Enterprise Point of Service'
-    susemgrproxy: SUSE Manager Proxy
+    susemgrproxy: 'SUSE Manager Proxy'
     webui: Web UI
     jeos: JeOS
     scc: SUSE Customer Center
@@ -71,6 +75,7 @@ asciidoc:
     suse: SUSE
     slea: SLE
     sleda: SLED
+    phub: 'SUSE Package Hub'
     ay: AutoYaST
     baseos:
     deploy: Deployment Guide
@@ -92,7 +97,7 @@ asciidoc:
     vmhost: VM Host Server
     xen: Xen
     kvm: KVM
-    k8s: Kubernetes
+    kube: Kubernetes
     caasp: SUSE CaaS Platform
     homepage: https://github.com/uyuni-project/uyuni-docs/
 
@@ -103,6 +108,9 @@ asciidoc:
     star: 'icon:asterisk[role="none"]'
     salt: Salt
     trad: Traditional
+
+    # snippets Directory
+    snippet: ../../ROOT/pages/snippets
 
 # Which branch and repository are you building from?
 # Where are you publishing to and which UI should you use?
