--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -152,14 +152,23 @@ extensions:
     config:
       suppressHtml: false
       pdfFiles:
-        - master@uyuni:administration:_administration-guide-pdf.adoc
-        - master@uyuni:client-configuration:_client-configuration-guide-pdf.adoc
-        - master@uyuni:installation:_installation-guide-pdf.adoc
-        - master@uyuni:large-deployments:_large-deployments-guide-pdf.adoc
-        - master@uyuni:quickstart-public-cloud:_quickstart-public-cloud-guide-pdf.adoc
-        - master@uyuni:reference:_reference-guide-pdf.adoc
-        - master@uyuni:retail:_retail-guide-pdf.adoc
-        - master@uyuni:salt:_salt-guide-pdf.adoc
-        - master@uyuni:upgrade:_upgrade-guide-pdf.adoc
+#        - master@uyuni:administration:_administration-guide-pdf.adoc
+#        - master@uyuni:client-configuration:_client-configuration-guide-pdf.adoc
+#        - master@uyuni:installation:_installation-guide-pdf.adoc
+#        - master@uyuni:large-deployments:_large-deployments-guide-pdf.adoc
+#        - master@uyuni:quickstart-public-cloud:_quickstart-public-cloud-guide-pdf.adoc
+#        - master@uyuni:reference:_reference-guide-pdf.adoc
+#        - master@uyuni:retail:_retail-guide-pdf.adoc
+#        - master@uyuni:salt:_salt-guide-pdf.adoc
+#        - master@uyuni:upgrade:_upgrade-guide-pdf.adoc
+        - master@uyuni:ROOT:pdfs/_administration-guide-pdf.adoc
+        - master@uyuni:ROOT:pdfs/_client-configuration-guide-pdf.adoc
+        - master@uyuni:ROOT:pdfs/_installation-guide-pdf.adoc
+        - master@uyuni:ROOT:pdfs/_large-deployments-guide-pdf.adoc
+        - master@uyuni:ROOT:pdfs/_quickstart-public-cloud-guide-pdf.adoc
+        - master@uyuni:ROOT:pdfs/_reference-guide-pdf.adoc
+        - master@uyuni:ROOT:pdfs/_retail-guide-pdf.adoc
+        - master@uyuni:ROOT:pdfs/_salt-guide-pdf.adoc
+        - master@uyuni:ROOT:pdfs/_upgrade-guide-pdf.adoc
 #      suspendServer: true
 
